Update href to GitHub repo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div>
             <span>GitHub URL:</span>
-            <a href="https://github.com/uchario" data-testid="githubURL">github URL</a>
+            <a href="https://github.com/uchario/HNGX-TaskOne" target="_blank" rel="noopener" data-testid="githubURL">github URL</a>
         </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
